--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,10 +2,8 @@
 <resources>
     <string name="graph">WebGraph</string>
     <string name="app_name">DailyNote</string>
-    <style name="CodeFont" parent="@android:style/TextAppearance.Medium">
-        <item name="android:typeface">monospace</item>
-        <item name="android:textSize">12sp</item>
-    </style>
     <style name="myButton">
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
 </resources>
